@@ -419,10 +419,10 @@
 		    <widget class="GtkComboBox" id="mobile_network_type">
 		      <property name="visible">True</property>
 		      <property name="items" translatable="yes">Any
-GPRS
-GSM
-Prefer GPRS
-Prefer GSM</property>
+3G (UMTS/HSPA)
+2G (GPRS/EDGE)
+Prefer 3G (UMTS/HSPA)
+Prefer 2G (GPRS/EDGE)</property>
 		      <property name="add_tearoffs">False</property>
 		      <property name="focus_on_click">True</property>
 		    </widget>
