@@ -1,3 +1,10 @@
+2008-09-25  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/ce-page-mobile.glade
+	  src/connection-editor/page-mobile.c
+		- Fix names & constants to accurately reflect the network technologies
+			in question (bgo #551361)
+
 2008-09-24  Dan Williams  <dcbw@redhat.com>
 
 	* src/gconf-helpers/gconf-helpers.c
